src/objects/EndpointUrlSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the end point url</description>
    <fields>
        <fullName>Auth_Token_URL__c</fullName>
        <label>Auth Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Authorization_Url__c</fullName>
        <description>It holds the url that is used to return the access token</description>
        <label>Authorization Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Callback_Url__c</fullName>
        <description>It holds the end point url for the particular service</description>
        <label>Callback Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Endpoint Url Settings</label>
</CustomObject>